# gliner2_rs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Justfile  README.md  build.rs
.github/workflows/: ci.yml  publish.yml  release.yml
.tickets/: gli-1oow.md  gli-2fyg.md  gli-2pwt.md  gli-48t1.md  gli-4ck0.md  gli-4hsh.md  gli-74yg.md  gli-7so4.md  gli-8mby.md  gli-8yv8.md  gli-a4wz.md  gli-av9i.md  gli-cbpt.md  gli-cyyi.md  gli-hpdf.md  gli-icjw.md  gli-jhz7.md  gli-jno8.md  gli-jq1m.md  gli-ky1e.md  gli-lk9d.md  gli-lwsd.md  gli-qad3.md  gli-s8l9.md  gli-wid9.md  gli-y3b9.md  gr-j4ib.md  gr-vgdj.md  har-5f61.md
crates/gliner2-tch/: Cargo.toml  build.rs
crates/gliner2-tch/src/: main.rs
harness/: benchmark_throughput.py  compare.py  compare_mt.py  compare_throughput.py  fixtures.json  fixtures_multitask.json  patch_readme.py  prepend_libtorch_ld_path.sh  pyproject.toml  readme_tables.py  run_all.sh  run_compare_all.sh  run_multitask.sh  run_multitask_python.py  run_python.py  run_throughput.sh
harness_compare/: Cargo.toml
harness_compare/src/: main.rs  mt_main.rs  throughput_main.rs
scripts/: list_keys.py
scripts/list_keys/: Cargo.toml
scripts/list_keys/src/: main.rs
src/: cli.rs  config.rs  decode.rs  engine.rs  extract.rs  labelstudio.rs  layers.rs  lib.rs  main.rs  model.rs  preprocess.rs  processor.rs  schema.rs  setup.rs  span_rep.rs  span_utils.rs
src/backends/: mod.rs
src/backends/burn/: layers.rs  mod.rs  model.rs  span_rep.rs  tensor_wrap.rs  weights.rs
src/backends/burn/deberta_v2/: attention.rs  config.rs  embeddings.rs  encoder.rs  mod.rs
src/backends/candle/: layers.rs  model.rs
src/backends/tch/: device.rs  heads.rs  mod.rs  weights.rs
src/backends/tch/deberta_v2/: attention.rs  common.rs  config.rs  encoder.rs  mod.rs
src/candle/: layers.rs  mod.rs  model.rs  span_rep.rs
src/extract/: output.rs
src/schema/: schema_document.rs
src/tch_backend/: heads.rs  loader.rs  mod.rs  weights.rs
tests/: batch_parity.rs  tch_parity.rs
