[package]
name = "gliner2"
version = "0.1.1"
edition = "2024"
rust-version = "1.87"
description = "Rust implementation of GLiNER2 with compatibility for upstream weights and Python training output."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/paul-english/gliner2_rs"
default-run = "gliner2"
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE",
    "/README.md",
    "/src/*.rs",
    "/src/backends/**/*.rs",
]

# Note: `tch` pulls LibTorch (see torch-sys). Use `--features tch` when LibTorch is installed, or
# add `--features download-libtorch` so `torch-sys` downloads a matching LibTorch (see harness scripts).

[workspace]
members = [
"harness_compare",
"scripts/list_keys",
"crates/gliner2-tch",
]
resolver = "2"

[dependencies]
candle-core = { version = "0.10", optional = true }
candle-nn = { version = "0.10", optional = true }
candle-transformers = { version = "0.10", optional = true }
hf-hub = "0.5"
tokenizers = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tch = { version = "0.24", optional = true }
safetensors = { version = "0.7", optional = true }
half = { version = "2", optional = true }
clap = { version = "4", features = ["derive", "env"] }
rayon = "1"
dirs = "6"
toml = { version = "0.8", features = ["preserve_order"] }
ureq = "3"
zip = "2"
indicatif = "0.17"

[features]
default = ["candle"]
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers"]
tch = ["dep:tch", "dep:safetensors", "dep:half"]
download-libtorch = ["tch?/download-libtorch"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/gliner2-{ target }.tar.gz"
bin-dir = "bin/{ name }"
pkg-fmt = "tgz"

[[test]]
name = "tch_parity"
required-features = ["candle", "tch"]

[[test]]
name = "batch_parity"
required-features = ["candle"]
