[package]
name = "gliner2"
version = "0.1.3"
edition = "2024"
rust-version = "1.87"
description = "Rust implementation of GLiNER2 with compatibility for upstream weights and Python training output."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/paul-english/gliner2_rs"
default-run = "gliner2"
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE",
    "/README.md",
    "/src/*.rs",
    "/src/schema/**/*.rs",
    "/src/extract/**/*.rs",
    "/src/backends/**/*.rs",
]

# Note: `tch` pulls LibTorch (see torch-sys). Use `--features tch` when LibTorch is installed, or
# add `--features download-libtorch` so `torch-sys` downloads a matching LibTorch (see harness scripts).

[workspace]
members = [
"harness_compare",
"scripts/list_keys",
]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2024"
rust-version = "1.87"
license = "Apache-2.0"
repository = "https://github.com/paul-english/gliner2_rs"

[workspace.dependencies]
anyhow = "1"
gliner2 = { version = "0.1.3", path = ".", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3.23"

[dependencies]
anyhow.workspace = true
candle-core = { version = "0.10", optional = true }
candle-nn = { version = "0.10", optional = true }
candle-transformers = { version = "0.10", optional = true }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
half = { version = "2", optional = true }
hf-hub = "0.5"
indexmap = { version = "2", features = ["serde"] }
indicatif = "0.18.4"
arrow-array = "58"
arrow-schema = "58"
glob = "0.3"
parquet = { version = "58", default-features = false, features = ["arrow", "snap", "zstd"] }
quick-xml = { version = "0.39", features = ["serialize"] }
rayon = "1"
regex = "1.12.3"
safetensors = { version = "0.7", optional = true }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tch = { version = "0.24", optional = true }
tokenizers = "0.22"
toml = { version = "1.1.2", features = ["preserve_order"] }
tracing-subscriber.workspace = true
tracing.workspace = true
ureq = "3"
zip = "8.5.1"

[features]
default = ["candle"]
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers"]
tch = ["dep:tch", "dep:safetensors", "dep:half"]
download-libtorch = ["tch?/download-libtorch"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/gliner2-{ target }.tar.gz"
bin-dir = "bin/{ name }"
pkg-fmt = "tgz"

[[test]]
name = "tch_parity"
required-features = ["candle", "tch"]

[[test]]
name = "batch_parity"
required-features = ["candle"]
