[package]
name = "harness_compare"
version = "0.1.0"
edition = "2024"
default-run = "harness_compare"

[[bin]]
name = "harness_compare_mt"
path = "src/mt_main.rs"

[dependencies]
gliner2 = { path = ".." }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
