[package]
name = "harness_compare"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false
default-run = "harness_compare"

[[bin]]
name = "harness_compare_mt"
path = "src/mt_main.rs"

[[bin]]
name = "harness_throughput"
path = "src/throughput_main.rs"

[features]
default = []
tch-backend = ["gliner2/tch", "dep:tch"]
download-libtorch = ["gliner2/download-libtorch", "tch?/download-libtorch"]

[dependencies]
gliner2 = { path = ".." }
tch = { version = "0.17", optional = true }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
