[package]
name = "gliner2-tch"
version = "0.1.1"
edition = "2024"
rust-version = "1.87"
description = "LibTorch-backed engine binary for gliner2. Invoked automatically by the gliner2 launcher."
license = "Apache-2.0"
repository = "https://github.com/paul-english/gliner2_rs"

[dependencies]
gliner2 = { path = "../..", default-features = false, features = ["tch"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive", "env"] }

[features]
default = []
download-libtorch = ["gliner2/download-libtorch"]

[package.metadata.binstall]
pkg-url = "https://github.com/paul-english/gliner2_rs/releases/download/v{ version }/gliner2-{ target }.tar.gz"
bin-dir = "bin/{ name }"
pkg-fmt = "tgz"
