[package]
name = "gliner2-tch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "LibTorch-backed engine binary for gliner2. Invoked automatically by the gliner2 launcher."
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive", "env"] }
gliner2.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[features]
default = []
download-libtorch = ["gliner2/download-libtorch"]

[package.metadata.binstall]
pkg-url = "https://github.com/paul-english/gliner2_rs/releases/download/v{ version }/gliner2-{ target }.tar.gz"
bin-dir = "bin/{ name }"
pkg-fmt = "tgz"
